fixed share icons z-index

--- a/_sass/overrides.scss
+++ b/_sass/overrides.scss
@@ -206,6 +206,7 @@ a.logo-link {
 		position: absolute;
 		top: $line-height-computed * 4;
 		left: 50px;
+		z-index: 100;
 
 		.share-icons {
 			&> iframe,
